--- a/app/src/main/res/layout-sw600dp/activity_tmtbinformation.xml
+++ b/app/src/main/res/layout-sw600dp/activity_tmtbinformation.xml
@@ -35,7 +35,11 @@
         android:layout_height="0dp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
-        android:textSize="13sp"
+        android:autoSizeMaxTextSize="24sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline76"
         app:layout_constraintEnd_toStartOf="@+id/guideline73"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
