--- a/app/src/main/res/layout-sw600dp/activity_information.xml
+++ b/app/src/main/res/layout-sw600dp/activity_information.xml
@@ -134,7 +134,11 @@
         android:fontFamily="sans-serif-light"
         android:hint="Digite o nome do paciente"
         android:inputType="text"
-        android:textSize="11sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -181,7 +185,10 @@
         android:id="@+id/inputPatientAge"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="11sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:ems="10"
 
         android:fontFamily="sans-serif-light"
@@ -199,10 +206,13 @@
         android:id="@+id/inputPatientIdentifier"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="11sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="Digite o identificador (ex. CPF)"
+        android:hint="Digite o identificador (CPF/Matrícula)"
         android:inputType="number"
         android:maxLength="11"
         android:maxLines="1"
@@ -268,7 +278,11 @@
         android:fontFamily="sans-serif-light"
         android:hint="Digite o nome do paciente"
         android:inputType="text"
-        android:textSize="11sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline35"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toEndOf="@+id/guideline"
@@ -297,10 +311,14 @@
         android:layout_height="0dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="Digite o identificador (ex.CPF)"
+        android:hint="Digite o identificador (CPF/Matrícula)"
         android:inputType="number"
         android:maxLength="11"
-        android:textSize="11sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline39"
         app:layout_constraintEnd_toStartOf="@+id/guideline45"
         app:layout_constraintStart_toEndOf="@+id/guideline"
@@ -328,7 +346,11 @@
         android:layout_height="0dp"
         android:backgroundTint="#CE4336"
         android:text="Cancelar"
-        android:textSize="18sp"
+        android:autoSizeMaxTextSize="24sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline41"
         app:layout_constraintEnd_toStartOf="@+id/guideline44"
         app:layout_constraintStart_toStartOf="@+id/guideline"
