--- a/app/src/main/res/layout-sw600dp/activity_tmtainformation.xml
+++ b/app/src/main/res/layout-sw600dp/activity_tmtainformation.xml
@@ -13,7 +13,11 @@
         android:layout_height="0dp"
         android:backgroundTint="#CE4336"
         android:text="Voltar"
-        android:textSize="13sp"
+        android:autoSizeMaxTextSize="24sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline62"
         app:layout_constraintEnd_toStartOf="@+id/guideline59"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
