--- a/app/src/main/res/layout-sw600dp/activity_information.xml
+++ b/app/src/main/res/layout-sw600dp/activity_information.xml
@@ -276,7 +276,7 @@
         android:layout_height="0dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="Digite o nome do paciente"
+        android:hint="Digite o nome do profissional"
         android:inputType="text"
         android:autoSizeMaxTextSize="20sp"
         android:autoSizeMinTextSize="16sp"
