--- a/app/src/main/res/layout-sw600dp/activity_results_screen.xml
+++ b/app/src/main/res/layout-sw600dp/activity_results_screen.xml
@@ -41,15 +41,15 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="76sp"
-            android:fontFamily="sans-serif-light"
-            android:text="Resultado"
-            android:textAlignment="center"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="70sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Resultado"
+            android:textAlignment="center"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline82"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.5"
@@ -76,14 +76,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="28dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Resumo"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="40sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Resumo"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline86"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -106,14 +106,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-light"
-            android:text="TMT-A"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="24sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="TMT-A"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline89"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -182,14 +182,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Toques levantados"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Toques levantados"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline93"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -201,14 +201,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Conexões corretas"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Conexões corretas"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline94"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -220,14 +220,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Conexões incorretas"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Conexões incorretas"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline95"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -241,14 +241,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
-            android:fontFamily="sans-serif-light"
-            android:text="TMT-B"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="24sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="TMT-B"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline96"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -260,14 +260,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="6dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Tempo Total"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Tempo Total"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline97"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -279,14 +279,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Tempo sem Lifts"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Tempo sem Lifts"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline98"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -298,14 +298,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Tempo de toque levantado"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Tempo de toque levantado"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline99"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -317,14 +317,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Toques levantados"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Toques levantados"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline100"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -336,14 +336,14 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="3dp"
-            android:fontFamily="sans-serif-light"
-            android:text="Conexões corretas"
-            android:textColor="@color/black"
             android:autoSizeMaxTextSize="20sp"
             android:autoSizeMinTextSize="16sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
+            android:fontFamily="sans-serif-light"
             android:maxLines="1"
+            android:text="Conexões corretas"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/guideline101"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
@@ -374,38 +374,33 @@
         <TextView
             android:id="@+id/textView24"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:autoSizeMaxTextSize="40sp"
-            android:autoSizeMinTextSize="16sp"
-            android:autoSizeStepGranularity="2sp"
-            android:autoSizeTextType="uniform"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="43dp"
             android:fontFamily="sans-serif-light"
-            android:maxLines="1"
             android:text="Detalhes TMT-A"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/guideline103"
+            android:textSize="40sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/guideline11"
-            app:layout_constraintTop_toTopOf="@+id/guideline110" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewTMTBConexoesIncorretas" />
 
         <ImageButton
             android:id="@+id/buttonExpandA"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="58dp"
+            android:layout_height="55dp"
             android:background="@color/white"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@+id/textView24"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline80"
-            app:layout_constraintTop_toTopOf="@+id/guideline110"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline11"
             app:srcCompat="@drawable/drop_arrow" />
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline104"
+            android:layout_width="638sp"
+            android:layout_height="13sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/guideline11"
@@ -431,28 +426,19 @@
                 android:fontFamily="sans-serif-light"
                 android:text="exemplo detalhe A"
                 android:textColor="@color/black"
-                android:autoSizeMaxTextSize="20sp"
-                android:autoSizeMinTextSize="16sp"
-                android:autoSizeStepGranularity="2sp"
-                android:autoSizeTextType="uniform"
-                android:maxLines="1" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <!-- Detalhes TMT-B -->
         <TextView
             android:id="@+id/textView25"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:fontFamily="sans-serif-light"
             android:text="Detalhes TMT-B"
             android:textColor="@color/black"
-            android:autoSizeMaxTextSize="40sp"
-            android:autoSizeMinTextSize="16sp"
-            android:autoSizeStepGranularity="2sp"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            app:layout_constraintBottom_toTopOf="@+id/guideline105"
+            android:textSize="40sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/guideline11"
@@ -460,23 +446,20 @@
 
         <ImageButton
             android:id="@+id/buttonExpandB"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="30dp"
+            android:layout_width="58dp"
+            android:layout_height="55dp"
             android:background="@color/white"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/textView25"
-            app:layout_constraintStart_toStartOf="@+id/guideline80"
-            app:layout_constraintTop_toTopOf="@+id/expandLayoutA"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintEnd_toStartOf="@+id/guideline12"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline11"
             app:srcCompat="@drawable/drop_arrow" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline107"
+            android:layout_width="638sp"
+            android:layout_height="13sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintStart_toStartOf="@+id/guideline11"
             app:layout_constraintTop_toBottomOf="@+id/textView25"
@@ -501,29 +484,20 @@
                 android:fontFamily="sans-serif-light"
                 android:text="exemplo detalhe B"
                 android:textColor="@color/black"
-                android:autoSizeMaxTextSize="20sp"
-                android:autoSizeMinTextSize="16sp"
-                android:autoSizeStepGranularity="2sp"
-                android:autoSizeTextType="uniform"
-                android:maxLines="1" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <!-- Botão final -->
         <Button
             android:id="@+id/buttonBackToHome"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="sans-serif"
             android:paddingTop="10sp"
             android:paddingBottom="10sp"
             android:text="Voltar para o início"
-            android:autoSizeMaxTextSize="34sp"
-            android:autoSizeMinTextSize="16sp"
-            android:autoSizeStepGranularity="2sp"
-            android:autoSizeTextType="uniform"
-            android:maxLines="1"
-            app:layout_constraintBottom_toTopOf="@+id/guideline108"
+            android:textSize="34sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline12"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="@+id/guideline11"
@@ -536,6 +510,7 @@
             app:layout_constraintTop_toBottomOf="@+id/buttonBackToHome"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+        <!--espaçamento-->
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline80"
@@ -661,7 +636,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="558dp" />
+            app:layout_constraintGuide_begin="722dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline102"
@@ -684,26 +659,6 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="861dp" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline105"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="943dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline107"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="955dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline108"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="1062dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline109"
@@ -718,13 +673,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="797dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline111"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="891dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
